--- a/OrderOfStars/Views/Shared/_Layout.cshtml
+++ b/OrderOfStars/Views/Shared/_Layout.cshtml
@@ -5,19 +5,26 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/Media.css")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    @Scripts.Render("/Scripts/jquery.form-validator.min.js")
+    @Scripts.Render("/Scripts/knockout.js")
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="~/Scripts/knockout.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <script src="https://npmcdn.com/flatpickr/dist/flatpickr.min.js"></script>
     <script src="https://npmcdn.com/flatpickr/dist/l10n/ru.js"></script>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="~/Content/Media.css" />
+
+   <!-- 
+         <script type="text/javascript" src="~/Scripts/knockout.js"></script>
+      <link rel="stylesheet" href="~/Content/Media.css" />
+       -->
 </head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <body>
@@ -65,8 +72,9 @@
     <footer>
         <p>&copy; @DateTime.Now.Year – приложение ASP.NET</p>
     </footer>        
+
     @Scripts.Render("~/bundles/bootstrap")
-    @Scripts.Render("~/scripts/jquery.unobtrusive-ajax.min.js")
-    @RenderSection("scripts", required: false)
+    @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js")
+    <!--"тутбыла собака"RenderSection("scripts", required: false)-->
 </body>
 </html>
