Вот теперь точно заменено

--- a/OrderOfStars/Content/Site.css
+++ b/OrderOfStars/Content/Site.css
@@ -214,6 +214,9 @@ footer {
     width: calc(50% + 1px);
     float: right;
 }
+.fa fa-ruble rubIcon{
+    font-size:24px;
+}
 /*--------------------------------------------------*/
 .pageUpTitle {
     font-size: 25px;
