Переделана структура заказа и внешний вид странички с заказами в админке

--- a/OrderOfStars/Views/Admin/CreateStar.cshtml
+++ b/OrderOfStars/Views/Admin/CreateStar.cshtml
@@ -93,10 +93,12 @@
                     alert("Браузер не поддерживает загрузку файлов HTML5!");
                 }
             }
-        }
         else {
             if (wasChange)
-                e.preventDefault();
+            {
+                $('#fileNameHiddenSpan').attr({ "value": "/Images/noAva.png" });
+                wasChange = false;
+            }
             else
                 $('#starForm').submit();
         }
