--- a/OrderOfStars/Content/Media.css
+++ b/OrderOfStars/Content/Media.css
@@ -85,6 +85,7 @@
 
 @media(min-width:640px) {
     
+    
     .headerMenu {
         display: none;
     }
@@ -146,6 +147,10 @@
     .headerHoverText {
         width: 100%;
         height: 100%;
+    }
+
+    .imgCorrector {
+        width: 100%;
     }
   
 }
