--- a/OrderOfStars/Content/Site.css
+++ b/OrderOfStars/Content/Site.css
@@ -279,14 +279,19 @@ footer {
     font-size:20px;
 }
 /*--------------------------*/
-.orderCard{
-    background-color:white;
-    border:1px solid black;
-    border-radius:4px;
-    margin:5px;
+.orderCard {
+    display: flex;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 4px;
+    margin: 5px;
+    width: 100%;
+    font-size:20px;
 }
 .orderCard>div{
-    width:100%;
+   border-bottom:1px solid black;
 }
 
 
